# rust-frame

./: .env.example  CHANGES.md  Cargo.toml  QR_IMAGE_API.md  QR_LOGIN_API.md  QR_LOGIN_IMPLEMENTATION.md  README.md  README_QR_LOGIN.md
.github/: dependabot.yml
docker/: docker-compose.yml
docker/initdb/: 002_create_qr_login_sessions.sql  code.sql  user.sql
frame-help/: Cargo.toml
frame-help/src/: main.rs
frame-help/src/config/: args.rs  log.rs  mod.rs
frame-help/src/tools/: jwt.rs
scaffold/: Cargo.toml
scaffold/examples/: app_scanner_example.md  qr_login_simple.html  qr_login_test.html  qr_login_websocket.html
scaffold/src/: main.rs
scaffold/src/backend/: app_router.rs  mod.rs  ws_manager.rs
scaffold/src/backend/api/: mod.rs
scaffold/src/backend/api/auth/: mod.rs
scaffold/src/backend/api/code/: handle_email_code.rs  mod.rs  send_email.rs  send_phone.rs
scaffold/src/backend/api/qr_login/: check_status.rs  confirm_login.rs  generate_qr.rs  handle_qr_session.rs  mod.rs  ws_status.rs
scaffold/src/backend/handlers/: handle_code.rs  handle_user.rs  mod.rs
scaffold/src/backend/middleware/: auth_middleware.rs  mod.rs  time.rs
scaffold/src/backend/models/: api_keys.rs  api_plans.rs  api_usage_logs.rs  api_users.rs  auth_sessions.rs  email_verification_codes.rs  email_verifications.rs  mod.rs  password_resets.rs  prelude.rs  qr_login_sessions.rs  sea_orm_active_enums.rs  user_logs.rs  users.rs
scaffold/src/backend/utils/: hash.rs  jwt.rs
scaffold/src/config/: arg.rs  env.rs  lazy_config.rs  log.rs  mod.rs  pg.rs
