[package]
name = "frame-help"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true


[lints]
workspace = true

[dependencies]

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true