[package]
name = "scaffold"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
actix-service.workspace = true

tokio.workspace = true

serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

sea-orm.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true